src/components/OrgFile/components/AttributedString/components/ListPart/stylesheet.css
.attributed-string__list-part {
  margin-top: 0;
  margin-bottom: 0;
  padding-left: 20px;
}

.attributed-string__list-part--ordered {
  margin-top: 0;
  margin-bottom: 0;
  padding-left: 40px;
}

.list-part__not_checkbox-container {
  height: 18.5px;
}

.list-part__not_checkbox-container span {
  display: inline-block;
  height: 18px;
}

.list-part__checkbox-container {
  line-height: 22px;
}

.list-part__item--selected {
  background-color: rgba(239, 255, 0, 0.28);
}

.list-title-line__edit-container {
  width: 100%;
}

